--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                         <span class="span-2">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</span>
                                     </p>
                                     <div class="elem-link">
-                                        <img src="img/expand.svg" alt="">
+                                        <img src="img/more.png" alt="">
                                         <a href="#!">Читать далее</a>
                                     </div>
                                 </div>
@@ -244,7 +244,8 @@
                             <div class="swiper-pagination slide-pagination"></div>
                         </div>
                         <div class="brands__more  elem-link">
-                            <img src="img/expand.svg" alt="">
+                            <img src="img/more.png" class="elem-more-link active" alt="">
+                            <img src="img/closeMore.png" class="elem-closrMore-link" alt="">
                             <a href="#!" class="link brands__link more-link-open active">Показать все</a>
                             <a href="#!" class="link brands__link more-link-close ">Скрыть</a>
                         </div>
